--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 						<td>
 							<select id="select_model" onchange="updateInit();" >
 									<option value="Beths">Beths (Propofol)</option>
-									<option value="Cattai-Propofol">Cattai (Propofol)</option>
+									<option value="Cattai-Propofol" disabled>Cattai (Propofol)</option>
 									<option value="Cattai-Fentanyl">Cattai (Fentanyl)</option>
 							</select>
 						</td>
 					</tr>
-					<tr id="row_premed">
+					<tr id="row_premed" style="display:none">
 						<td>Premed
 						</td>
 						<td>
