--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</tr>
 
 					<tr>
-						<td>Mode <i class="far fa-question-circle tooltip"><span class="tooltiptext" style="width: 160px">CE targeting: experimental; for propofol</span></i></td>
+						<td>Mode</td>
 						<td>
 							<select id="select_mode" onchange="" >
 									<option value="cpt">CP targeting</option>
@@ -152,12 +152,12 @@
 					</tr>
 
 					<tr id="row_premed" style="">
-						<td>Premed
+						<td>Premed <i class="far fa-question-circle tooltip"><span class="tooltiptext" style="width: 160px">Premed with acepromazine+methadone?</span></i>
 						</td>
 						<td>
 							<select id="select_premed" onchange="" >
 									<option value="0">No</option>
-									<option value="1">Yes ()</option>
+									<option value="1">Yes (ACP-Methadone)</option>
 							</select>
 						</td>
 					</tr>
