--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
 						<td><input type="number" inputmode="decimal" id="inputInfusion0" min="0" max="1200" step="0.01" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus0">
-					<tr>
+					<tr class="fr">
 						<td>
 							<div class="infusionratecontainer" id="boluscontainer0"><span id="bolusdescription0">Initial bolus (<span class="infused_units"></span>)</span>
 								<span class="infusionrateselector" id="bolusselector0" onclick="dropdownshowbolus(0,'')"><i class="fas fa-chevron-down"></i></span>
@@ -1438,7 +1438,7 @@
 						<td><input type="number" inputmode="decimal" id="inputInfusion1" min="0" max="1200" step="0.01" placeholder=" " onchange=""></td></tr>
 				</table>
 				<table class="table-control space" id="tableInitialBolus1">
-					<tr>
+					<tr class="fr">
 						<td>
 							<div class="infusionratecontainer" id="boluscontainer1"><span id="bolusdescription1">Initial bolus (<span class="infused_units"></span>)</span>
 								<span class="infusionrateselector" id="bolusselector1" onclick="dropdownshowbolus(1,'')"><i class="fas fa-chevron-down"></i></span>
@@ -1879,28 +1879,28 @@
 		<div class="card" id="card_controlpanel">
 			<div class="cardtitle">CONTROL PANEL</div>
 			<div class="cardcontents">
-				<div class="timeFxRow">
+				<div class="timeFxRow" onclick="timeFxReset();">
 					<div class="timeFxRowLeft"><a id="btn_timeFxReset" onclick="timeFxReset();" class="timeFxButton"><i class="fas fa-undo-alt"></i></a></div>
 					<div class="timeFxRowRight">
 						<div class="timeFxLine1">Restart sim</div>
 						<div class="timeFxLine2">Keep same patient data & start over</div>
 					</div>
 				</div>
-				<div class="timeFxRow" id="timeFxRowSuspend">
+				<div class="timeFxRow" id="timeFxRowSuspend" onclick="timeFxSuspend();">
 					<div class="timeFxRowLeft"><a id="btn_timeFxSuspend" onclick="timeFxSuspend();" class="timeFxButton"><i class="fas fa-pause fa-fw"></i></a></div>
 					<div class="timeFxRowRight">
 						<div class="timeFxLine1">Pause sim</div>
 						<div class="timeFxLine2">Suspend simulation & keep all data</div>
 					</div>
 				</div>
-				<div class="timeFxRow hide" id="timeFxRowResume">
+				<div class="timeFxRow hide" id="timeFxRowResume" onclick="timeFxResume(0);">
 					<div class="timeFxRowLeft"><a id="btn_timeFxResume" onclick="timeFxResume(0);" class="timeFxButton"><i class="fas fa-play fa-fw"></i></a></div>
 					<div class="timeFxRowRight">
 						<div class="timeFxLine1">Resume sim</div>
 						<div class="timeFxLine2">Resume running simulation</div>
 					</div>
 				</div>
-				<div class="timeFxRow">
+				<div class="timeFxRow" onclick="timeFxOpenJump();" >
 					<div class="timeFxRowLeft"><a id="btn_timeFxJump" onclick="timeFxOpenJump();" class="timeFxButton"><i class="fas fa-stopwatch fa-fw"></i></a></div>
 					<div class="timeFxRowRight">
 						<div class="timeFxLine1">Jump to time</div>
